syntax = "proto3";

package codectrl.data.log;

import "backtrace_data.proto";

// Main log message for use when sending to a CodeCtrl gRPC server.
message Log {
  // NOTE: This field should be generated by CodeCtrl gRPC servers, any value
  // assigned to it by loggers will be overwritten. Therefore, leave it as a
  // blank.
  string                                uuid        = 1;
  repeated backtrace_data.BacktraceData stack       = 2;
  uint32                                lineNumber  = 3;
  map<uint32, string>                   codeSnippet = 4;
  string                                message     = 5;
  string                                messageType = 6;
  string                                fileName    = 7;
  // NOTE: This field should be generated by CodeCtrl gRPC servers, any value
  // assigned to it by loggers will be overwritten. Therefore, leave it as a
  // blank.
  string                                address     = 8;
  string                                language    = 9;
  repeated string                       warnings    = 10;
}
